# machine-factor

./: Cargo.toml  README.md
src/: lib.rs  mfactor.rs  primes.rs  wfactor.rs
