[package]
name = "machine-factor"
version = "0.1.0"
edition = "2021"
author = ["JASory j_a_sory@protonmail.org"]
description = "constant factorisation for machine-size integers"
repository = "https://github.com/JASory/machine-factor"
keywords = ["no-std","const","factorization", "factor", "number-theory"]
categories = ["no-std","mathematics"]
license = "CC0-1.0"
readme = "README.md"

[[bench]]
name = "speed"
harness=false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.machine-prime]
version ="1.5.4"
features=["wide","internal"]
default-features=false

[features]
internal=[]
#default=["internal"]
#[lib]
#crate-type=["cdylib"]

[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
